<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/foodImage"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/headerOption" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addonsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_text" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="12dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp">

        <ImageButton
            android:id="@+id/btnMinus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_remove"
            android:contentDescription="@string/minus_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:tint="#D70F64" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnMinus"
            app:layout_constraintStart_toEndOf="@id/btnMinus"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintTop_toTopOf="@id/btnMinus" />

        <ImageButton
            android:id="@+id/btnPlus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/plus_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddToCart"
            app:layout_constraintStart_toEndOf="@id/tvQuantity"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#D70F64" />

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/add_to_cart_btn"
            app:backgroundTint="@null"
            android:text="Add to Cart - RM 0.00"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnPlus"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/circle_white_bg"
        android:elevation="14dp"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/go_back"
        app:layout_anchorGravity="top|start"
        app:tint="@color/black" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>